--- a/v_regular/Mocket/app/src/main/res/values/strings.xml
+++ b/v_regular/Mocket/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Mocket</string>
+    <string-array name="notification_duration">
+        <item>3 hours</item>
+        <item>6 hours</item>
+    </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="gesture_option">
+        <item>Shake</item>
+    </string-array>
+
 </resources>
