--- a/v_regular/Mocket/app/src/main/res/values/strings.xml
+++ b/v_regular/Mocket/app/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
     <string-array name="gesture_option">
         <item>Shake</item>
     </string-array>
+    <string-array name="vibration">
+        <item>ON</item>
+        <item>OFF</item>
+    </string-array>
 
 </resources>
